<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="playBookActivity"
            type="com.hypersoft.golfapp.ui.activity.PlayBookDialog" />
    </data>

    <LinearLayout
        android:id="@+id/play_book"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/margin22">

        <TextView
            android:id="@+id/textView"
            style="@style/TextView.Black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/txt_play_golf"
            android:textSize="16dp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin16"
            android:src="@drawable/golfman" />

        <Button
            android:id="@+id/btnBook"
            style="@style/Button.Small.OrangeBigRoundCorner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{()->playBookActivity.onBookSlotclick()}"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/margin16"
            android:text="@string/lbl_bookslot"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btnPlay"
            android:layout_marginBottom="@dimen/margin16"
            style="@style/Button.Small.BlackBigRoundCorner"
            android:onClick="@{()->playBookActivity.onPlaynowClick()}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/lbl_playnow"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btnCancel"
            style="@style/Button.Small.OrangeBigRoundCornerLight"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:onClick="@{()->playBookActivity.onCancelClick()}"
            android:layout_gravity="right"
            android:text="@string/lbl_cancel"
            android:textAllCaps="false" />

    </LinearLayout>
</layout>