<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="user"
            type="com.hypersoft.golfapp.communication.models.User" />

        <variable
            name="signupActivity"
            type="com.hypersoft.golfapp.ui.activity.SignUpActivity" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin12"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin5"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin5"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/email1" />

                    <EditText
                        android:id="@+id/etMailAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin8"
                        android:hint="@string/mail_address_loginid"
                        android:text="@={user.loginId}"
                        android:singleLine="true"
                        android:textColorHint="@color/blackHint" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin5"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/password1" />

                    <EditText
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin8"
                        android:hint="@string/hint_password"
                        android:text="@={user.password}"
                        android:singleLine="true"
                        android:textColorHint="@color/blackHint" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin5"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/password1" />

                    <EditText
                        android:id="@+id/etRePassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin8"
                        android:hint="@string/hint_password_re"
                        android:text="@={user.rePassword}"
                        android:singleLine="true"
                        android:textColorHint="@color/blackHint" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin5"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/user1" />

                    <EditText
                        android:id="@+id/etLastName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin8"
                        android:hint="@string/hint_lastname"
                        android:text="@={user.lastName}"
                        android:singleLine="true"
                        android:textColorHint="@color/blackHint" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin5"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/user1" />

                    <EditText
                        android:id="@+id/etFirstName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin8"
                        android:hint="@string/hint_firsetname"
                        android:text="@={user.firstName}"
                        android:singleLine="true"
                        android:textColorHint="@color/blackHint" />
                </LinearLayout>

                <Button
                    android:id="@+id/btSignUp"
                    style="@style/BigButtons"
                    android:onClick="@{()->signupActivity.onSignupClick()}"
                    android:layout_marginTop="@dimen/margin22"
                    android:background="@drawable/orange_button"
                    android:text="@string/lbl_signup" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>