<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="scoreCardDialog"
            type="com.hypersoft.golfapp.ui.activity.ScoreCardDialog" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/margin8">

        <ImageView
            android:id="@+id/ivCloseDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:onClick="@{()->scoreCardDialog.onCloseClick()}"
            android:src="@drawable/ic_action_navigation_close" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/text_black"
                    android:padding="@dimen/margin12"
                    android:text="2"
                    android:textColor="#ffffff" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/txt_recordshot"
                    android:textColor="@color/orangeDark"
                    android:textSize="18dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin25"
                    android:text="@string/txt_coursecount"
                    android:textColor="#d3d3d3"
                    android:textSize="18dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" 450Y"
                    android:textColor="@color/orangeDark"
                    android:textSize="18dp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="80dp"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin10"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/you"
                    android:textSize="25sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/scored"
                    android:textColor="@color/colorAccent"
                    android:textSize="25sp" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ProgressBar
                    android:id="@+id/progressBarRound1"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:layout_margin="@dimen/margin10"
                    android:max="100"
                    android:progress="95"
                    android:progressDrawable="@drawable/custom_progressbar" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/progressBarRound1"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/margin8"
                    android:text="Shot 1 : 400 (-50)"
                    android:textColor="@android:color/white" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ProgressBar
                    android:id="@+id/progressBarRound2"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:layout_margin="@dimen/margin10"
                    android:max="100"
                    android:progress="70"
                    android:progressDrawable="@drawable/custom_progressbar" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/progressBarRound2"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/margin8"
                    android:text="Shot 2 : 200 (-250)"
                    android:textColor="@android:color/white" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ProgressBar
                    android:id="@+id/progessBarRound3"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:layout_margin="@dimen/margin10"
                    android:max="100"
                    android:progress="45"
                    android:progressDrawable="@drawable/custom_progressbar" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/progessBarRound3"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/margin8"
                    android:text="Shot 3 : 100 (-150)"
                    android:textColor="@android:color/white" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ProgressBar
                    android:id="@+id/progressBarRound4"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:layout_margin="@dimen/margin10"
                    android:max="100"
                    android:progress="30"
                    android:progressDrawable="@drawable/custom_progressbar" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/progressBarRound4"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/margin8"
                    android:background="@android:color/transparent"
                    android:text="Shot 4 : 90 (-40)"
                    android:textColor="@android:color/white" />
            </RelativeLayout>

        </LinearLayout>
    </LinearLayout>
</layout>

